Avoid height jump (FOUC) when showing 'loading' placeholder
Put a min-height on the placeholder equal to the
height of the image.

Also put the placeholder insider the wrapper and
toggle the image instead, to avoid inline-block
height issues.

Generate $placeholder template just once.

And wait just a little bit before hiding the image, to
minimize FOUC when the image is already available.

Bug: T187327

--- a/modules/ext.3d.less
+++ b/modules/ext.3d.less
@@ -19,3 +19,10 @@
 	background-color: #f8f9fa;
 	border-radius: 2px;
 }
+
+.mw-3d-thumb-placeholder {
+	display: inline-block;
+	// Override link styles
+	text-decoration: none;
+	color: #222;
+}
